Updated timer functionality

--- a/src/makefile
+++ b/src/makefile
@@ -1,5 +1,5 @@
 OBJDIR = ../obj
-OBJS = $(addprefix $(OBJDIR)/, main.o table.o column.o measure.o stringExtensions.o tableSchema.o datejd.o simplecharcontainer.o dbhandler.o database.o )
+OBJS = $(addprefix $(OBJDIR)/, main.o table.o column.o timer.o stringExtensions.o tableSchema.o datejd.o simplecharcontainer.o dbhandler.o database.o )
 OUT = database
 
 CC = g++-4.8
@@ -14,8 +14,8 @@ LDFLAGS = -Wall
 
 all: $(OUT)
 
-#database: main.o table.o column.o $(OBJDIR)/measure.o $(OBJDIR)/stringExtensions.o tableSchema.o $(OBJDIR)/datejd.o
-#	$(CC) $(LDFLAGS) tableSchema.o table.o column.o $(OBJDIR)/measure.o $(OBJDIR)/stringExtensions.o $(OBJDIR)/datejd.o main.o -o $(OUT)
+#database: main.o table.o column.o $(OBJDIR)/timer.o $(OBJDIR)/stringExtensions.o tableSchema.o $(OBJDIR)/datejd.o
+#	$(CC) $(LDFLAGS) tableSchema.o table.o column.o $(OBJDIR)/timer.o $(OBJDIR)/stringExtensions.o $(OBJDIR)/datejd.o main.o -o $(OUT)
 
 $(OUT): $(OBJS)
 	$(CC) $(LDFLAGS) $(OBJS) -o $(OUT)
@@ -32,8 +32,8 @@ $(OBJDIR)/column.o: datastore/column.cpp datastore/column.h datastore/tableSchem
 $(OBJDIR)/tableSchema.o: datastore/tableSchema.cpp datastore/tableSchema.h
 	$(CC) $(CFLAGS) datastore/tableSchema.cpp -o $(OBJDIR)/tableSchema.o
 
-$(OBJDIR)/measure.o: tools/measure.cpp
-	$(CC) $(CFLAGS) tools/measure.cpp -o $(OBJDIR)/measure.o
+$(OBJDIR)/timer.o: tools/timer.cpp
+	$(CC) $(CFLAGS) tools/timer.cpp -o $(OBJDIR)/timer.o
 
 $(OBJDIR)/stringExtensions.o: tools/stringExtensions.cpp
 	$(CC) $(CFLAGS) tools/stringExtensions.cpp -o $(OBJDIR)/stringExtensions.o
